--- a/app/views/workouts/index.html.haml
+++ b/app/views/workouts/index.html.haml
@@ -1,1 +1,6 @@
-%h1 This is the Workouts#Index Placeholder
+
+
+- @workouts.each do |workout|
+	%h2= link_to workout.date, workout
+	%h3= workout.workout
+
